@@ -48,7 +48,7 @@
 </div>
 
 <ng-template #loadingTemplate>
-    <ws-spinner *ngIf="loading.isRunning(); else noItemTemplate" class="text-center d-block w-100" style="padding-top: 30vh"></ws-spinner>
+    <ws-spinner *ngIf="loading.isRunning(); else noItemTemplate" [borderWidth]="1" [spinnerColor]="'#b71c1c'" class="text-center d-block w-100" style="padding-top: 30vh"></ws-spinner>
 </ng-template>
 
 <ng-template #noItemTemplate>
