@@ -1,3 +1,3 @@
 <ng-template #loadingTemplate>
-  <ws-spinner *ngIf="loading.isRunning();" class="text-center d-block w-100" style="padding-top: 30vh; padding-bottom: 30vh"></ws-spinner>
+  <ws-spinner *ngIf="loading.isRunning();" class="text-center d-block w-100" [borderWidth]="1" [spinnerColor]="'#b71c1c'" style="padding-top: 30vh; padding-bottom: 30vh"></ws-spinner>
 </ng-template>
