@@ -25,10 +25,10 @@
     </div>
     <div class="offset-lg-3" style="width: 312px">
         <button [disabled]="passwordLoading.isRunning()" class="btn btn-sm btn-controller float-right" (click)="editPassword()">
-            <ws-spinner *ngIf="passwordLoading.isRunning()" class="mr-2" [width]="15" [height]="15" [borderWidth]="3" ></ws-spinner>Change Password</button>
+            <ws-spinner *ngIf="passwordLoading.isRunning()" class="mr-2" [width]="15" [height]="15" [borderWidth]="1" [spinnerColor]="'#b71c1c'"></ws-spinner>Change Password</button>
     </div>
 </div>
 
 <ng-template #loadingTemplate>
-    <ws-spinner *ngIf="loading.isRunning();" class="text-center d-block w-100" style="padding-top: 30vh; padding-bottom: 30vh"></ws-spinner>
+    <ws-spinner *ngIf="loading.isRunning();" class="text-center d-block w-100" [borderWidth]="1" [spinnerColor]="'#b71c1c'" style="padding-top: 30vh; padding-bottom: 30vh"></ws-spinner>
 </ng-template>
