@@ -7,6 +7,7 @@
 - 2020-11-06                                -
 ---------------------------------------------
 .: WSM: Task: CLONE - Standardize button colors (WSW-86)
+.: WSM: Task: CLONE - Standardize loading (WSW-87)
 
 ---------------------------------------------
 - 2020-11-04                                -
